--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "google": "^2.1.0",
     "nodemon": "^2.0.7",
     "ol": "^10.4.0"
   }
